# pdf-picker

./: LICENSE  README.md  default.nix  pdf-picker.py  pyproject.toml
src/pdf_picker/: __init__.py  pdf-picker.py  picker.py
