[project]
name = "pdf-picker"
version = "0.1.0"
description = "Interactively open a PDF file, optionally at a specific TOC entry."
readme = "README.md"
authors = [
	{ name = "fdf", email = "171835561+fdf-uni@users.noreply.github.com" },
]
requires-python = ">=3.9"
dependencies = [
    "pymupdf>=1.24",
]

[project.scripts]
pdf-picker = "pdf_picker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
